--- a/css/about.css
+++ b/css/about.css
@@ -1,51 +1,53 @@
 html {
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-    text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-    background-image: url("../pics/pharm2code_tilt.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+  background-image: url("../pics/pharm2code_tilt.jpg");
 }
 
 body {
-    background-color: transparent;
-    align-items: center;
+  background-color: transparent;
+  align-items: center;
 }
 
 /* Article CSS Below */
 #article1 {
-    margin: 1rem auto;
-    padding: 1rem;
-    border: 1px solid black;
-    border-radius: 0.25rem;
-    background-color: black;
-    width: 90vw;
-    max-width: 960px;
-    line-height: 1.6;
+  margin: 1rem auto;
+  padding: 1rem;
+  border: 1px solid black;
+  border-radius: 0.25rem;
+  background-color: black;
+  width: 90vw;
+  max-width: 960px;
+  line-height: 1.6;
 }
 
 #article1>h2 {
-    padding: 0.5rem;
-    color: white;
-    font-style: italic;
-    text-align: center;
-    text-decoration: underline;
+  padding: 0.5rem;
+  color: white;
+  font-style: italic;
+  text-align: center;
+  text-decoration: underline;
 }
 
 #article1>p {
-    padding: 0.5rem;
-    color: silver;
+  padding: 0.5rem;
+  color: silver;
 }
 
 #article1>ol {
-    padding: 1rem 1.5rem 1rem 1.5rem;
-    color: silver;
+  padding: 1rem 1.5rem 1rem 1.5rem;
+  color: silver;
 }
 
 #article1>ol>li {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
-a,a:link,a:visited {
-    color: lime;
-    text-decoration: none;
+a,
+a:link,
+a:visited {
+  color: lime;
+  text-decoration: none;
 }
