--- a/css/construction.css
+++ b/css/construction.css
@@ -1,280 +1,304 @@
-*, *::before, *::after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-}
-
 html {
-    background-image: url("../pics/construction.jpg");
-    background-color: black;
-    font-family: 'Roboto', sans-serif;
-    overflow-x: hidden;
-    width: 100%;
-    /* text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); */
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  background-image: url("../pics/construction.jpg");
+  background-color: black;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
-    /* background-color: transparent; */
-    display: flex;
-    flex-direction: column;
-    /* justify-content: center; */
-    align-items: center;
-    height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
 }
 
 #welcome {
-    display: block;
-    margin-top: 5vh;
-    text-align: center;
-    align-content: center;
-    width: fit-content;
-    height: min-content;
-    justify-content: center;
+  display: block;
+  margin-top: 5vh;
+  text-align: center;
+  align-content: center;
+  width: fit-content;
+  height: min-content;
+  justify-content: center;
 }
 
 @media (max-height:360px) {
-    #welcome {
-        margin-top: 1rem;
-    }
+  #welcome {
+    margin-top: 1rem;
+  }
 }
 
 #welcome>figure {
-    padding: 0 1rem 0 1rem;
+  padding: 0 1rem 0 1rem;
 }
 
 footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 1rem;
-    color: white;
-    animation: articleFadeIn 5.5s ease-in-out;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 1rem;
+  color: white;
+  animation: articleFadeIn 5.5s ease-in-out;
 }
 
 .socialLogo {
-    max-height: 1.5rem;
-    transition: transform 0.5s ease-in-out;
+  max-height: 1.5rem;
+  transition: transform 0.5s ease-in-out;
 }
 
 .socialLogo:hover {
-    transform: scale(-1, 1) scale(1);
+  transform: scale(-1, 1) scale(1);
 }
 
 /* Welcome Animations Below */
 .animationDropDown {
-    color: white;
-    animation: animationDropDown 1s;
-    margin-top: 3vh;
+  color: white;
+  animation: animationDropDown 1s;
+  margin-top: 3vh;
 }
+
 @keyframes animationDropDown {
-    0% {
-        margin-top: -50vh;
-    }
-    30% {
-        margin-top: 10;
-        transform: scaleY(90%);
-    }
-    65% {
-        margin-top: 20vh;
-        transform: scaleY(80%);
-    }
-    85% {
-        margin-top: 3vh;
-    }
+  0% {
+    margin-top: -50vh;
+  }
+
+  30% {
+    margin-top: 10;
+    transform: scaleY(90%);
+  }
+
+  65% {
+    margin-top: 20vh;
+    transform: scaleY(80%);
+  }
+
+  85% {
+    margin-top: 3vh;
+  }
 }
 
 .animationSlideFromLeft {
-    color: white;
-    font-style: italic;
-    animation: animationSlideFromLeft 3s;
-    letter-spacing: 0.3rem;
-    padding-bottom: 2rem;
+  color: white;
+  font-style: italic;
+  animation: animationSlideFromLeft 3s;
+  letter-spacing: 0.3rem;
+  padding-bottom: 2rem;
 }
+
 .animationSlideFromLeft>:nth-child(2) {
-    color: black;
+  color: black;
 }
+
 @keyframes animationSlideFromLeft {
-    0% {
-        margin-left: -200vw;
-        letter-spacing: 0;
-    }
-    30% {
-        margin-left: -150vw;
-        letter-spacing: -0.125rem;
-    }
-    40% {
-        margin-left: -125vw;
-        letter-spacing: -0.125rem;
-    }
-    90% {
-        margin-left: 30vw;
-        letter-spacing: -0.4rem;
-    }
-    95% {
-        letter-spacing: 0.4rem;
-    }
+  0% {
+    margin-left: -200vw;
+    letter-spacing: 0;
+  }
+
+  30% {
+    margin-left: -150vw;
+    letter-spacing: -0.125rem;
+  }
+
+  40% {
+    margin-left: -125vw;
+    letter-spacing: -0.125rem;
+  }
+
+  90% {
+    margin-left: 30vw;
+    letter-spacing: -0.4rem;
+  }
+
+  95% {
+    letter-spacing: 0.4rem;
+  }
 }
 
 .animationExpand {
-    animation: animationExpand 3.25s ease-in;
-    color: lime;
+  animation: animationExpand 3.25s ease-in;
+  color: lime;
 }
+
 @keyframes animationExpand {
-    0% {
-        opacity: 0;
-        font-size: 0rem;
-    }
-    79% {
-        opacity: 0;
-        font-size: 0rem;
-    }
-    80% {
-        font-size: 0.1rem;
-    }
-    90% {
-        font-size: 2.5rem;
-    }
-    100% {
-        font-size: 1rem;
-    }
+  0% {
+    opacity: 0;
+    font-size: 0rem;
+  }
+
+  79% {
+    opacity: 0;
+    font-size: 0rem;
+  }
+
+  80% {
+    font-size: 0.1rem;
+  }
+
+  90% {
+    font-size: 2.5rem;
+  }
+
+  100% {
+    font-size: 1rem;
+  }
 }
 
 .animationTurnGreen {
-    animation: animationTurnGreen 3.25s ease-in-out;
-    color: lime;
+  animation: animationTurnGreen 3.25s ease-in-out;
+  color: lime;
 }
+
 @keyframes animationTurnGreen {
-    0% {
-        color: black;
-    }
-    89% {
-        color: black;
-        font-size: 2rem;
-    }
-    90% {
-        color: lime;
-        font-size: 2.5rem;
-    }
-    100% {
-        font-size: 2rem;
-    }
+  0% {
+    color: black;
+  }
+
+  89% {
+    color: black;
+    font-size: 2rem;
+  }
+
+  90% {
+    color: lime;
+    font-size: 2.5rem;
+  }
+
+  100% {
+    font-size: 2rem;
+  }
 }
 
 .animationTurnOpaque {
-    animation: animationTurnOpaque 4s ease-in-out;
-    opacity: 0.3;
+  animation: animationTurnOpaque 4s ease-in-out;
+  opacity: 0.3;
 }
+
 @keyframes animationTurnOpaque {
-    0% {
-        opacity: 1;
-    }
-    76% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0.3;
-    }
+  0% {
+    opacity: 1;
+  }
+
+  76% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0.3;
+  }
 }
 
 .animationBorder {
-    border: 1px solid lime;
-    border-radius: 0.125rem;
-    animation: animationBorder 4.25s ease-in-out;
+  border: 1px solid lime;
+  border-radius: 0.125rem;
+  animation: animationBorder 4.25s ease-in-out;
 }
+
 @keyframes animationBorder {
-    0% {
-        border: none;
-    }
-    66% {
-        border: none;
-    }
-    71% {
-        border: 8px solid lime;
-        border-radius: 10px;
-    }
-    100% {
-        border: 1px solid lime;
-    }
+  0% {
+    border: none;
+  }
+
+  66% {
+    border: none;
+  }
+
+  71% {
+    border: 8px solid lime;
+    border-radius: 10px;
+  }
+
+  100% {
+    border: 1px solid lime;
+  }
 }
 
 .animationFlipIn {
-    animation: animationFlipIn 4.75s ease-in-out;
-    border-radius: .125rem;
-    color: black;
-    margin: 1rem;
-    font-size: 1rem;
-    background: repeating-linear-gradient(45deg, gray, gray 10px, darkkhaki 10px,
-darkkhaki 20px);
+  animation: animationFlipIn 4.75s ease-in-out;
+  border-radius: .125rem;
+  color: black;
+  margin: 1rem;
+  font-size: 1rem;
+  background: repeating-linear-gradient(45deg, gray, gray 10px, darkkhaki 10px,
+      darkkhaki 20px);
 }
+
 @keyframes animationFlipIn {
-    0% {
-        opacity: 0;
-    }
-    80% {
-        opacity: 0;
-    }
-    85% {
-        transform: scale(1);
-    }
-    100% {
-        transform: scale(1, -1) scale(1, -1);
-    }
+  0% {
+    opacity: 0;
+  }
+
+  80% {
+    opacity: 0;
+  }
+
+  85% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(1, -1) scale(1, -1);
+  }
 }
+
 /* Welcome Animations Above */
 
 /* Article CSS Below */
 #article1 {
-    animation: articleFadeIn 5.5s ease-in-out;
-    margin: 1rem;
-    padding: 1rem;
-    border: 1px solid black;
-    border-radius: 0.25rem;
-    background-color: black;
-    max-width: 1280px;
+  animation: articleFadeIn 5.5s ease-in-out;
+  margin: 1rem;
+  padding: 1rem;
+  border: 1px solid black;
+  border-radius: 0.25rem;
+  background-color: black;
+  max-width: 1280px;
 }
+
 @keyframes articleFadeIn {
-    0% {
-        opacity: 0;
-        height: 0%;
-    }
-    90% {
-        opacity: 0;
-        height: 0%;
-    }
-    100% {
-        opacity: 1;
-        height: 100%;
-    }
+  0% {
+    opacity: 0;
+    height: 0%;
+  }
+
+  90% {
+    opacity: 0;
+    height: 0%;
+  }
+
+  100% {
+    opacity: 1;
+    height: 100%;
+  }
 }
 
 #article1>h2 {
-    padding: 0.5rem;
-    color: white;
-    font-style: italic;
-    text-align: center;
-    text-decoration: underline;
+  padding: 0.5rem;
+  color: white;
+  font-style: italic;
+  text-align: center;
+  text-decoration: underline;
 }
 
 #article1>p {
-    padding: 0.5rem;
-    color: silver;
+  padding: 0.5rem;
+  color: silver;
 }
 
 #article1>ol {
-    padding: 1rem 1.5rem 1rem 1.5rem;
-    color: silver;
+  padding: 1rem 1.5rem 1rem 1.5rem;
+  color: silver;
 }
 
 #article1>ol>li {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
-a,a:link,a:visited {
-    color: lime;
-    text-decoration: none;
+a,
+a:link,
+a:visited {
+  color: lime;
+  text-decoration: none;
 }
