--- a/css/test.css
+++ b/css/test.css
@@ -272,15 +272,18 @@ body {
 
 #typeWriter>h2 {
   margin-left: 21vw;
-  font-family: Menlo Regular;
-  font-size: 3.5vw;
   position: relative;
   width: max-content; 
   font-weight: normal;
+  font-family: Menlo Regular;
+  font-size: 3.5vw;
+  letter-spacing: 0.125rem;
   color: silver;
 }
 
-#typeWriter>h2:before, #typeWriter>h2:after {
+#typeWriter1:before, #typeWriter1:after,
+#typeWriter2:before, #typeWriter2:after,
+#typeWriter3:before, #typeWriter3:after {
   content: "";
   position: absolute;
   top: 0;
@@ -288,18 +291,18 @@ body {
   height: 100%;
 }
 
-#typeWriter>h2::before {
+#typeWriter1::before {
   width: 100vw;
   background: black;
-  animation: write 2.5s steps(25) 0.5s forwards; /* Number of steps */
+  animation: write 2s steps(30) 0.5s forwards;
   animation-delay: 4s;
 }
 
-#typeWriter>h2::after {
+#typeWriter1::after {
   opacity: 1;
   width: 0.15em; 
-  background: white;
-  animation: write 2.5s steps(25) 0.5s forwards, blink 0.75s steps(2) infinite;
+  background: black;
+  animation: write 2s steps(30) 0.5s forwards, blink 0.75s reverse steps(30) 3.25;
   animation-delay: 4s;
 }
 
@@ -307,20 +310,104 @@ body {
   to {
     left: 100%;
   }
-  
 }
 
 @keyframes blink {
   0% {
     opacity: 0;
+    background: white;
   } 
   49.9% {
      opacity: 0;
   }
   50% {
      opacity: 1;
+     background: white;
+    }
+  98% {
+    opacity: 1;
+    background: white;
   }
   100% {
-     opacity: 1;
+    opacity: 0;
+    background: white;
   }
+}
+
+#typeWriter2 {
+  padding-left: 2ch;
+  animation: typeWriter2Fade 7s ease-in-out;
+}
+
+@keyframes typeWriter2Fade {
+  0% {
+    opacity: 0;
+  }
+  70% {
+    opacity: 0;
+  }
+  80.9% {
+    opacity: 1;
+
+  }
+  81% {
+    opacity: 1;
+  }
+  100% {
+
+  }
+}
+
+#typeWriter2::before {
+  width: 100vw;
+  background: black;
+  animation: write 3s steps(35) 0.5s forwards;
+  animation-delay: 6.5s;
+}
+
+#typeWriter2::after {
+  opacity: 1;
+  width: 0.15em; 
+  background: black;
+  animation: write 3s steps(35) 0.5s forwards, blink 0.75s reverse steps(30) 5;
+  animation-delay: 6.5s;
+}
+
+#typeWriter3 {
+  padding-left: 2ch;
+  animation: typeWriter3Fade 11s ease-in-out;
+}
+
+@keyframes typeWriter3Fade {
+  0% {
+    opacity: 0;
+  }
+  70% {
+    opacity: 0;
+  }
+  80.9% {
+    opacity: 1;
+
+  }
+  81% {
+    opacity: 1;
+  }
+  100% {
+
+  }
+}
+
+#typeWriter3::before {
+  width: 100vw;
+  background: black;
+  animation: write 2s steps(35) 0.5s forwards;
+  animation-delay: 10.5s;
+}
+
+#typeWriter3::after {
+  opacity: 1;
+  width: 0.15em; 
+  background: black;
+  animation: write 2s steps(35) 0.5s forwards, blink 0.75s reverse steps(30) infinite;
+  animation-delay: 10.5s;
 }
