--- a/css/test.css
+++ b/css/test.css
@@ -239,6 +239,9 @@ body {
 section {
   background-color: black;
   width: 100vw;
+  max-width: 100vw;
+  overflow-x: hidden;
+  /* transition: all 0.5s ease-in-out; */
 }
 
 #typeWriter {
