--- a/css/test.css
+++ b/css/test.css
@@ -110,22 +110,26 @@ body {
     opacity: 0;
     font-size: 0rem;
   }
-
+  59% {
+    opacity: 0;
+    font-size: 0rem;
+    color: black;
+  }
   79% {
     opacity: 0;
     font-size: 0rem;
+    color: lime;
   }
-
-  80% {
+  79.1% {
     font-size: 0.1rem;
+    color: lime;
   }
-
-  90% {
+  89% {
     font-size: 2.5rem;
+    color: lime;
   }
-
   100% {
-    font-size: 1rem;
+    /* font-size: 1rem; */
   }
 }
 
@@ -138,19 +142,16 @@ body {
   0% {
     color: #00857c;
   }
-
   89% {
     color: #00857c;
     font-size: 2rem;
   }
-
   90% {
     color: lime;
     font-size: 2.5rem;
   }
-
   100% {
-    font-size: 2rem;
+    /* font-size: 2rem; */
   }
 }
 
@@ -163,11 +164,9 @@ body {
   0% {
     opacity: 1;
   }
-
   76% {
     opacity: 1;
   }
-
   100% {
     opacity: 0.3;
   }
@@ -183,77 +182,37 @@ body {
   0% {
     border: none;
   }
-
   66% {
     border: none;
   }
-
   71% {
     border: 8px solid lime;
   }
-
   100% {
     border: 1px solid lime;
   }
 }
 
-/* .animationFadeIn {
-  width: fit-content;
-  border-radius: 0.25rem;
-  padding: 0.75rem 1rem 0.5rem 1rem;
-  margin: 10vh auto;
-  text-align: start;
-  animation: animationFadeIn 4.25s ease-in-out;
-  color: silver;
-  background-color: black;
-  font-family: Menlo Regular;
-}
-
-@media (max-width:650px) {
-  .animationFadeIn>h2 {
-    font-size: 4vw;
-  }
-}
-
-@keyframes animationFadeIn {
-  0% {
-    opacity: 0;
-  }
-  70% {
-    opacity: 0;
-  }
-  80% {
-    opacity: 1;
-  }
-  81% {
-    opacity: 1;
-    transform: scale(0.5, 0) skew(45deg, 45deg) rotate(0.75turn);
-  }
-  100% {
-    transform: scale(1);
-  }
-} */
-
 /* Intro Animations Above */
 
 section {
-  background-color: black;
-  width: 100vw;
-  max-width: 100vw;
-  overflow-x: hidden;
-  /* transition: all 0.5s ease-in-out; */
+
 }
 
 #typeWriter {
   margin: 0 auto;
   width: fit-content;
-  padding: 2rem 0;
+  padding: 5vh 0;
   background-color: black;
   display: flex;
   flex-direction: column;
 }
 
 #typeWriterSection {
+  background-color: black;
+  width: 100vw;
+  max-width: 100vw;
+  overflow-x: hidden;
   animation: animationFadeIn 5s ease-in-out;
 }
 
@@ -278,6 +237,12 @@ section {
   #typeWriter>h2 {
     font-size: 1rem !important;
     letter-spacing: normal !important;
+  }
+}
+
+@media (max-height: 500px) {
+  #typeWriterSection {
+    margin-top: -5vh;
   }
 }
 
@@ -323,7 +288,7 @@ section {
 #typeWriter1::before {
   width: 100vw;
   background: black;
-  animation: write 2s steps(30) 0.5s forwards;
+  animation: write 1s steps(25) 0.5s forwards;
   animation-delay: 4s;
 }
 
@@ -331,7 +296,7 @@ section {
   opacity: 1;
   width: 0.15em; 
   background: black;
-  animation: write 2s steps(30) 0.5s forwards, blink 0.75s reverse steps(30) 3.25;
+  animation: write 1s steps(22) 0.5s forwards, blink 0.75s reverse steps(22) 2;
   animation-delay: 4s;
 }
 
@@ -389,16 +354,16 @@ section {
 #typeWriter2::before {
   width: 100vw;
   background: black;
-  animation: write 3s steps(35) 0.5s forwards;
-  animation-delay: 6.5s;
+  animation: write 1.5s steps(35) 0.5s forwards;
+  animation-delay: 5.5s;
 }
 
 #typeWriter2::after {
   opacity: 1;
   width: 0.15em; 
   background: black;
-  animation: write 3s steps(35) 0.5s forwards, blink 0.75s reverse steps(30) 5;
-  animation-delay: 6.5s;
+  animation: write 1.5s steps(28) 0.5s forwards, blink 0.75s reverse steps(28) 3;
+  animation-delay: 5.5s;
 }
 
 #typeWriter3 {
@@ -409,10 +374,10 @@ section {
   0% {
     opacity: 0;
   }
-  70% {
+  59% {
     opacity: 0;
   }
-  80.9% {
+  60% {
     opacity: 1;
 
   }
@@ -427,14 +392,14 @@ section {
 #typeWriter3::before {
   width: 100vw;
   background: black;
-  animation: write 2s steps(35) 0.5s forwards;
-  animation-delay: 10.5s;
+  animation: write 1.5s steps(24) 0.5s forwards;
+  animation-delay: 7.5s;
 }
 
 #typeWriter3::after {
   opacity: 1;
   width: 0.15em; 
   background: black;
-  animation: write 2s steps(35) 0.5s forwards, blink 0.75s reverse steps(30) infinite;
-  animation-delay: 10.5s;
+  animation: write 1.5s steps(24) 0.5s forwards, blink 0.75s reverse steps(24) infinite;
+  animation-delay: 7.5s;
 }
