--- a/css/welcome.css
+++ b/css/welcome.css
@@ -9,13 +9,15 @@ html {
 
 body {
   background-color: transparent;
-  align-items: center;
+  /* align-items: center; */
   height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 #welcome {
   display: block;
-  margin-top: 10vh;
+  margin: 10vh auto;
   padding-top: 1.5rem;
   text-align: center;
   align-content: center;
@@ -108,22 +110,26 @@ body {
     opacity: 0;
     font-size: 0rem;
   }
-
+  59% {
+    opacity: 0;
+    font-size: 0rem;
+    color: black;
+  }
   79% {
     opacity: 0;
     font-size: 0rem;
+    color: lime;
   }
-
-  80% {
+  79.1% {
     font-size: 0.1rem;
+    color: lime;
   }
-
-  90% {
+  89% {
     font-size: 2.5rem;
+    color: lime;
   }
-
   100% {
-    font-size: 1rem;
+    /* font-size: 1rem; */
   }
 }
 
@@ -136,19 +142,16 @@ body {
   0% {
     color: #00857c;
   }
-
   89% {
     color: #00857c;
     font-size: 2rem;
   }
-
   90% {
     color: lime;
     font-size: 2.5rem;
   }
-
   100% {
-    font-size: 2rem;
+    /* font-size: 2rem; */
   }
 }
 
@@ -161,11 +164,9 @@ body {
   0% {
     opacity: 1;
   }
-
   76% {
     opacity: 1;
   }
-
   100% {
     opacity: 0.3;
   }
@@ -181,54 +182,224 @@ body {
   0% {
     border: none;
   }
-
   66% {
     border: none;
   }
-
   71% {
     border: 8px solid lime;
   }
-
   100% {
     border: 1px solid lime;
   }
 }
 
-.animationFlipIn {
-  width: fit-content;
-  border-radius: 0.25rem;
-  padding: 0.75rem 1rem 0.5rem 1rem;
-  margin: 10vh auto;
-  text-align: start;
-  animation: animationFlipIn 4.25s ease-in-out;
-  color: silver;
-  background-color: black;
-  font-family: Menlo Regular;
+/* Intro Animations Above */
+
+section {
+
 }
 
-@media (max-width:650px) {
-  .animationFlipIn>h2 {
+#typeWriter {
+  margin: 0 auto;
+  width: fit-content;
+  padding: 5vh 0;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+}
+
+#typeWriterSection {
+  background-color: black;
+  width: 100vw;
+  max-width: 100vw;
+  overflow-x: hidden;
+  animation: animationFadeIn 5s ease-in-out;
+}
+
+@media (max-width: 635px) {
+  #typeWriter>h2 {
     font-size: 4vw;
+  }
+  #typeWriter>h2 {
+    font-size: 1.5rem !important;
+    letter-spacing: normal !important;
   }
 }
 
-@keyframes animationFlipIn {
+@media (max-width: 500px) {
+  #typeWriter>h2 {
+    font-size: 1.25rem !important;
+    letter-spacing: normal !important;
+  }
+}
+
+@media (max-width: 350px) {
+  #typeWriter>h2 {
+    font-size: 1rem !important;
+    letter-spacing: normal !important;
+  }
+}
+
+@media (max-height: 500px) {
+  #typeWriterSection {
+    margin-top: -5vh;
+  }
+}
+
+@keyframes animationFadeIn {
   0% {
     opacity: 0;
   }
-
-  80% {
+  70% {
     opacity: 0;
   }
+  80.9% {
+    opacity: 1;
 
-  81% {
-    transform: scale(0.5, 0) skew(45deg, 45deg) rotate(0.75turn);
   }
-
+  81% {
+    opacity: 1;
+  }
   100% {
-    transform: scale(1);
+
   }
 }
 
-/* Intro Animations Above */
+#typeWriter>h2 {
+  position: relative;
+  width: max-content; 
+  font-weight: normal;
+  font-family: Menlo Regular;
+  font-size: 1.5rem;
+  letter-spacing: 0.125rem;
+  color: silver;
+}
+
+#typeWriter1:before, #typeWriter1:after,
+#typeWriter2:before, #typeWriter2:after,
+#typeWriter3:before, #typeWriter3:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+}
+
+#typeWriter1::before {
+  width: 100vw;
+  background: black;
+  animation: write 1s steps(25) 0.5s forwards;
+  animation-delay: 4s;
+}
+
+#typeWriter1::after {
+  opacity: 1;
+  width: 0.15em; 
+  background: black;
+  animation: write 1s steps(22) 0.5s forwards, blink 0.75s reverse steps(22) 2;
+  animation-delay: 4s;
+}
+
+@keyframes write {
+  to {
+    left: 100%;
+  }
+}
+
+@keyframes blink {
+  0% {
+    opacity: 0;
+    background: white;
+  } 
+  49.9% {
+     opacity: 0;
+  }
+  50% {
+     opacity: 1;
+     background: white;
+    }
+  98% {
+    opacity: 1;
+    background: white;
+  }
+  100% {
+    opacity: 0;
+    background: white;
+  }
+}
+
+#typeWriter2 {
+  animation: typeWriter2Fade 7s ease-in-out;
+}
+
+@keyframes typeWriter2Fade {
+  0% {
+    opacity: 0;
+  }
+  70% {
+    opacity: 0;
+  }
+  80.9% {
+    opacity: 1;
+
+  }
+  81% {
+    opacity: 1;
+  }
+  100% {
+
+  }
+}
+
+#typeWriter2::before {
+  width: 100vw;
+  background: black;
+  animation: write 1.5s steps(35) 0.5s forwards;
+  animation-delay: 5.5s;
+}
+
+#typeWriter2::after {
+  opacity: 1;
+  width: 0.15em; 
+  background: black;
+  animation: write 1.5s steps(28) 0.5s forwards, blink 0.75s reverse steps(28) 3;
+  animation-delay: 5.5s;
+}
+
+#typeWriter3 {
+  animation: typeWriter3Fade 11s ease-in-out;
+}
+
+@keyframes typeWriter3Fade {
+  0% {
+    opacity: 0;
+  }
+  59% {
+    opacity: 0;
+  }
+  60% {
+    opacity: 1;
+
+  }
+  81% {
+    opacity: 1;
+  }
+  100% {
+
+  }
+}
+
+#typeWriter3::before {
+  width: 100vw;
+  background: black;
+  animation: write 1.5s steps(24) 0.5s forwards;
+  animation-delay: 7.5s;
+}
+
+#typeWriter3::after {
+  opacity: 1;
+  width: 0.15em; 
+  background: black;
+  animation: write 1.5s steps(24) 0.5s forwards, blink 0.75s reverse steps(24) infinite;
+  animation-delay: 7.5s;
+}
