--- a/css/welcome.css
+++ b/css/welcome.css
@@ -230,18 +230,13 @@ body {
   0% {
     opacity: 0;
   }
-  70% {
+  56.125% {
     opacity: 0;
+    transform: scale(0);
   }
-  80.9% {
+  59.125% {
+    transform: scale(1);
     opacity: 1;
-
-  }
-  81% {
-    opacity: 1;
-  }
-  100% {
-
   }
 }
 
