--- a/css/blog.css
+++ b/css/blog.css
@@ -3,7 +3,8 @@ html {
   background-attachment: fixed;
   background-position: center;
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  background-image: url("../pics/pharm2code_tilt.jpg");
+  /* background-image: url("../pics/pharm2code_tilt.jpg"); */
+  background-color: rgb(50, 50, 50);
 }
 
 body {
@@ -62,6 +63,7 @@ a:visited {
   width: 90vw;
   max-width: 960px;
   line-height: 1.6;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .myBlog>div {
