--- a/css/blog.css
+++ b/css/blog.css
@@ -55,6 +55,30 @@ a:visited {
   text-decoration: none;
 }
 
+.myArticles {
+  margin: 2rem auto;
+  padding: 1rem;
+  color: silver;
+  border-radius: 0.25rem;
+  background-color: transparent;
+  width: 75vw;
+  max-width: 800px;
+  line-height: 1;
+}
+
+.myArticles>h1 {
+  color: white;
+  font-family: Menlo Regular;
+  text-align: center;
+  text-shadow: 3px 3px black;
+}
+
+@media (max-width:1400px) {
+  .myArticles {
+    margin: 1rem auto;
+  }
+}
+
 /* Blog CSS Below */
 .myBlog {
   margin: 1rem;
