--- a/css/experience.css
+++ b/css/experience.css
@@ -3,11 +3,8 @@ html {
   background-attachment: fixed;
   background-position: center;
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  background-image: url("../pics/pharm2code_tilt.jpg");
-  background-color: black;
-  font-family: 'Roboto', sans-serif;
-  overflow-x: hidden;
-  width: 100%;
+  /* background-image: url("../pics/pharm2code_tilt.jpg"); */
+  background-color: rgb(50, 50, 50);
 }
 
 body {
