--- a/css/projects.css
+++ b/css/projects.css
@@ -88,6 +88,17 @@ h5 {
   display: flex;
 }
 
+.btnRepo {
+  border: 1px solid rgb(50,50,50) !important;
+  background-color: rgb(50,50,50) !important;
+}
+
+.btnRepo:hover {
+  background-color: black !important;
+  border-color: lime !important;
+  color: lime !important;
+}
+
 .btn {
   margin: 0 1px;
   width: 7rem;
