--- a/css/navbar.css
+++ b/css/navbar.css
@@ -20,7 +20,8 @@
 
 .navbar-collapse {
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../pics/pharm2code_tilt.jpg");
+  /* background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../pics/pharm2code_tilt.jpg"); */
+  background-color: black;
   border-radius: 0.25rem;
   padding-left: 1rem;
   height: fit-content;
