--- a/css/navbar.css
+++ b/css/navbar.css
@@ -22,6 +22,7 @@
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
   /* background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../pics/pharm2code_tilt.jpg"); */
   background-color: black;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   border-radius: 0.25rem;
   padding-left: 1rem;
   height: fit-content;
