--- a/css/about.css
+++ b/css/about.css
@@ -59,8 +59,8 @@ a:visited {
   color: black;
   margin: 1rem;
   font-family: Menlo Regular;
-  background: repeating-linear-gradient(45deg, gray, gray 10px, darkkhaki 10px,
-      darkkhaki 20px);
+  background: repeating-linear-gradient(45deg, gray, gray 10px, darkkhaki 10px,darkkhaki 20px);
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 @keyframes animationFlipIn {
