--- a/css/about.css
+++ b/css/about.css
@@ -1,79 +1,117 @@
 html {
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: center;
-  /* background-image: url("../pics/pharm2code_tilt.jpg"); */
-  background-color: rgb(50, 50, 50);
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    /* background-image: url("../pics/pharm2code_tilt.jpg"); */
+    background-color: rgb(50, 50, 50);
 }
 
 body {
-  background-color: transparent;
-  align-items: center;
+    background-color: transparent;
+    align-items: center;
 }
 
 /* Article CSS Below */
-#article1 {
-  margin: 1rem auto;
-  padding: 1rem;
-  border: 1px solid black;
-  border-radius: 0.25rem;
-  background-color: black;
-  width: 90vw;
-  max-width: 960px;
-  line-height: 1.6;
-}
-
-#article1>h2 {
-  padding: 0.5rem;
-  color: white;
-  font-style: italic;
-  text-align: center;
-  text-decoration: underline;
-}
-
-#article1>p {
-  padding: 0.5rem;
-  color: silver;
-}
-
-#article1>ol {
-  padding: 1rem 1.5rem 1rem 1.5rem;
-  color: silver;
-}
-
-#article1>ol>li {
-  margin-bottom: 1rem;
-}
+.myArticles {
+    margin: 1rem auto;
+    padding: 1rem;
+    border: 1px solid black;
+    border-radius: 0.25rem;
+    background-color: black;
+    width: 90vw;
+    max-width: 960px;
+    line-height: 1.6;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  }
+  
+  @media (max-width:960px) {
+    .myArticles {
+      margin: 1rem 5vw;
+    }
+  }
+  
+  .myArticles>div>div>h3>img {
+    width: 20vw;
+    min-width: 5rem;
+    max-width: 10rem;
+    margin-right: 5vw;
+  }
+  
+  h1,
+  h2,
+  .container-fluid>div>div>h3,
+  h4,
+  .h3 {
+    color: #00857c;
+    font-family: Menlo Regular;
+  }
+  
+  h5,
+  h6,
+  p {
+    color: white;
+  }
+  
+  ul {
+    color: silver;
+  }
 
 a,
 a:link,
 a:visited {
-  color: lime;
-  text-decoration: none;
+    color: lime;
+    text-decoration: none;
+}
+
+.img-fluid {
+    height: 10rem;
+    width: 10rem;
+    background-color: white;
+    border-radius: 50%;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+}
+
+#techStack>.row,
+#education>.row,
+#hobbies>.row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 1rem;
+}
+
+.img-squared {
+    border-radius: 0.25rem;
+    background-color: transparent;
+    height: 10rem;
+    width: auto
 }
 
 .animationFlipIn {
-  padding: 1rem;
-  animation: animationFlipIn 1s ease-in-out;
-  border-radius: .125rem;
-  color: black;
-  margin: 1rem;
-  font-family: Menlo Regular;
-  background: repeating-linear-gradient(45deg, gray, gray 10px, darkkhaki 10px,darkkhaki 20px);
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    padding: 1rem;
+    animation: animationFlipIn 1s ease-in-out;
+    border-radius: .125rem;
+    color: black;
+    margin: 1rem;
+    font-family: Menlo Regular;
+    background: repeating-linear-gradient(45deg, gray, gray 10px, darkkhaki 10px, darkkhaki 20px);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 @keyframes animationFlipIn {
-  0% {
-    opacity: 0;
-  }
-  20% {
-    opacity: 0;
-  }
-  25% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(1, -1) scale(1, -1);
-  }
+    0% {
+        opacity: 0;
+    }
+
+    20% {
+        opacity: 0;
+    }
+
+    25% {
+        transform: scale(1);
+    }
+
+    100% {
+        transform: scale(1, -1) scale(1, -1);
+    }
 }
