--- a/css/experience.css
+++ b/css/experience.css
@@ -80,6 +80,7 @@ a:visited {
 }
 
 #typeWriterSection {
+    margin-top: 2rem !important;
     background-color: rgb(50, 50, 50);
     width: 100vw;
     max-width: 100vw;
