--- a/css/about_new.css
+++ b/css/about_new.css
@@ -22,39 +22,43 @@ body {
     max-width: 960px;
     line-height: 1.6;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-  }
-  
-  @media (max-width:960px) {
+}
+
+@media (max-width:960px) {
     .myArticles {
-      margin: 1rem 5vw;
+        margin: 1rem 5vw;
     }
-  }
-  
-  .myArticles>div>div>h3>img {
+}
+
+.myArticles>div>div>h3>img {
     width: 20vw;
     min-width: 5rem;
     max-width: 10rem;
     margin-right: 5vw;
-  }
-  
-  h1,
-  h2,
-  .container-fluid>div>div>h3,
-  h4,
-  .h3 {
+}
+
+h1,
+h2,
+h4,
+h6,
+.container-fluid>div>div>h3,
+.h3 {
     color: #00857c;
     font-family: Menlo Regular;
-  }
-  
-  h5,
-  h6,
-  p {
+}
+
+h5,
+p {
     color: white;
-  }
-  
-  ul {
+}
+
+h6 {
+    font-family: Menlo Regular;
+}
+
+ul {
     color: silver;
-  }
+}
 
 a,
 a:link,
@@ -70,9 +74,13 @@ a:visited {
     box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
+.img-fluid:hover {
+    opacity: 0.5;
+}
+
 #techStack>.row,
 #education>.row,
-#hobbies>.row {
+#personal>.row {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
