--- a/css/resume.css
+++ b/css/resume.css
@@ -2,6 +2,7 @@ html {
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
+    text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
     /* background-image: url("../pics/pharm2code_tilt.jpg"); */
     background-color: rgb(50, 50, 50);
 }
@@ -9,6 +10,56 @@ html {
 body {
     background-color: transparent;
     align-items: center;
+}
+
+/* Experience Tech Stack */
+#techStack>.row,
+#education>.row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 1rem;
+}
+a>.img-fluid,a {
+    transition: all 0.5s ease-in-out;
+}
+a>.img-fluid:hover,a:hover {
+    opacity: 0.5;
+}
+
+.img-fluid {
+    height: 10rem;
+    width: 10rem;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+}
+
+.img-round {
+    border-radius: 50%;
+}
+
+.img-square {
+    border-radius: 1.125rem;
+    background-color: transparent;
+    height: 10rem;
+    width: auto;
+}
+
+.img-rect {
+    border-radius: 0.25rem;
+    background-color: transparent;
+    height: auto;
+    width: 10rem;
+}
+
+.dateSection {
+    background-color: rgb(50, 50, 50);
+    border-radius: 0.25rem;
+    height: 1.75rem;
+}
+
+.dateSection>p {
+    text-shadow: 1px 1px black;
 }
 
 /* Article CSS Below */
@@ -39,15 +90,16 @@ body {
 
 h1,
 h2,
-h4,
-h6,
 .container-fluid>div>div>h3,
+h4,
 .h3 {
     color: #00857c;
+    text-align: start;
     font-family: Menlo Regular;
 }
 
 h5,
+h6,
 p {
     color: white;
 }
@@ -60,89 +112,15 @@ ul {
     color: silver;
 }
 
+#article1>ol>li {
+    margin-bottom: 1rem;
+}
+
 a,
 a:link,
 a:visited {
     color: lime;
     text-decoration: none;
-}
-
-.img-fluid {
-    height: 10rem;
-    width: 10rem;
-    background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-}
-
-.img-fluid:hover {
-    opacity: 0.5;
-}
-
-#greetingPic>img {
-    width: 30vw;
-    height: 30vw;
-    position: static;
-    opacity: 0.25;
-    border-radius: 50%;
-    margin-top: -15rem;
-    margin-left: -3rem;
-    margin-bottom: -10rem;
-}
-
-#techStack>.row,
-#education>.row,
-#personal>.row {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    gap: 1rem;
-}
-
-.img-round {
-    border-radius: 50%;
-}
-
-.img-square {
-    border-radius: 1.125rem;
-    background-color: transparent;
-    height: 10rem;
-    width: auto;
-}
-
-.img-rect {
-    border-radius: 0.25rem;
-    background-color: transparent;
-    height: auto;
-    width: 10rem;
-}
-
-.animationFlipIn {
-    padding: 1rem;
-    animation: animationFlipIn 1s ease-in-out;
-    border-radius: .125rem;
-    color: black;
-    margin: 1rem;
-    font-family: Menlo Regular;
-    background: repeating-linear-gradient(45deg, gray, gray 10px, darkkhaki 10px, darkkhaki 20px);
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-}
-
-@keyframes animationFlipIn {
-    0% {
-        opacity: 0;
-    }
-
-    20% {
-        opacity: 0;
-    }
-
-    25% {
-        transform: scale(1);
-    }
-
-    100% {
-        transform: scale(1, -1) scale(1, -1);
-    }
 }
 
 /* typeWriter below */
