--- a/css/resume.css
+++ b/css/resume.css
@@ -23,7 +23,7 @@ body {
 a>.img-fluid,a {
     transition: all 0.5s ease-in-out;
 }
-a>.img-fluid:hover,a:hover {
+a>.img-fluid:hover {
     opacity: 0.5;
 }
 
