type writer updates

--- a/css/about.css
+++ b/css/about.css
@@ -242,6 +242,7 @@ a>img:hover {
     font-size: 1.75rem;
     letter-spacing: 0.125rem;
     color: silver;
+    text-shadow: 1px 1px black;
 }
 
 #typeWriter1:before,
