--- a/css/blog.css
+++ b/css/blog.css
@@ -3,7 +3,6 @@ html {
   background-attachment: fixed;
   background-position: center;
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  /* background-image: url("../pics/pharm2code_tilt.jpg"); */
   background-color: rgb(50, 50, 50);
 }
 
@@ -15,9 +14,7 @@ body {
 
 h2 {
   color: #00857c;
-  font-style: italic;
   text-align: center;
-  text-decoration: underline;
   font-family: Menlo Regular;
 }
 
@@ -133,4 +130,203 @@ a:visited {
 h6 {
   color: #00857c;
   font-family: Menlo Regular;
+}
+
+/* typeWriter below */
+#typeWriter {
+    margin: 0 auto;
+    width: fit-content;
+    padding: 5vh 0;
+    background-color: rgb(50, 50, 50);
+    display: flex;
+    flex-direction: column;
+}
+
+#typeWriterSection {
+    margin-top: 2rem !important;
+    background-color: rgb(50, 50, 50);
+    width: 100vw;
+    max-width: 100vw;
+    overflow-x: hidden;
+    margin-bottom: -3rem;
+}
+
+@media (max-width: 635px) {
+    #typeWriter>h2 {
+        font-size: 4vw;
+    }
+
+    #typeWriter>h2 {
+        font-size: 1.5rem !important;
+        letter-spacing: normal !important;
+    }
+}
+
+@media (max-width: 500px) {
+    #typeWriter>h2 {
+        font-size: 1.25rem !important;
+        letter-spacing: normal !important;
+    }
+}
+
+@media (max-width: 350px) {
+    #typeWriter>h2 {
+        font-size: 1rem !important;
+        letter-spacing: normal !important;
+    }
+}
+
+@media (max-height: 500px) {
+    #typeWriterSection {
+        margin-top: -5vh;
+    }
+}
+
+@keyframes animationFadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    56.125% {
+        opacity: 0;
+        transform: scale(0);
+    }
+
+    59.125% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+#typeWriter>h2 {
+    position: relative;
+    width: max-content;
+    font-weight: normal;
+    font-family: Menlo Regular;
+    font-size: 1.75rem;
+    letter-spacing: 0.125rem;
+    color: silver;
+    text-shadow: 1px 1px black;
+}
+
+#typeWriter1:before,
+#typeWriter1:after,
+#typeWriter2:before,
+#typeWriter2:after,
+#typeWriter3:before,
+#typeWriter3:after,
+#typeWriter4:before,
+#typeWriter4:after,
+#typeWriter5:before,
+#typeWriter5:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+}
+
+#typeWriter1::before {
+    width: 100vw;
+    background: rgb(50, 50, 50);
+    animation: write 1.5s steps(31) 0.5s forwards;
+}
+
+#typeWriter1::after {
+    opacity: 1;
+    width: 0.15em;
+    background: rgb(50, 50, 50);
+    animation: write 1.5s steps(31) 0.5s forwards, blink 0.75s reverse steps(31) 3.25;
+}
+
+@keyframes write {
+    to {
+        left: 100%;
+    }
+}
+
+@keyframes blink {
+    0% {
+        opacity: 0;
+        background: white;
+    }
+
+    49.9% {
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 1;
+        background: white;
+    }
+
+    98% {
+        opacity: 1;
+        background: white;
+    }
+
+    100% {
+        opacity: 0;
+        background: white;
+    }
+}
+
+#typeWriter2::before {
+    width: 100vw;
+    background: rgb(50, 50, 50);
+    animation: write 1.25s steps(25) 0.5s forwards;
+    animation-delay: 2.5s;
+}
+
+#typeWriter2::after {
+    opacity: 1;
+    width: 0.15em;
+    background: rgb(50, 50, 50);
+    animation: write 1.25s steps(25) 0.5s forwards, blink 0.75s reverse steps(25) 2.125;
+    animation-delay: 2.5s;
+}
+
+#typeWriter3::before {
+    width: 100vw;
+    background: rgb(50, 50, 50);
+    animation: write 1.5s steps(31) 0.5s forwards;
+    animation-delay: 4.25s;
+}
+
+#typeWriter3::after {
+    opacity: 1;
+    width: 0.15em;
+    background: rgb(50, 50, 50);
+    animation: write 1.5s steps(31) 0.5s forwards, blink 0.75s reverse steps(31) 3;
+    animation-delay: 4.25s;
+}
+
+#typeWriter4::before {
+    width: 100vw;
+    background: rgb(50, 50, 50);
+    animation: write 0.5s steps(3) 0.5s forwards;
+    animation-delay: 6.25s;
+}
+
+#typeWriter4::after {
+    opacity: 1;
+    width: 0.15em;
+    background: rgb(50, 50, 50);
+    animation: write 0.5s steps(3) 0.5s forwards, blink 0.75s reverse steps(3) 1;
+    animation-delay: 6.25s;
+}
+
+#typeWriter5::before {
+    width: 100vw;
+    background: rgb(50, 50, 50);
+    animation: write 0.5s steps(2) 0.5s forwards;
+    animation-delay: 7s;
+}
+
+#typeWriter5::after {
+    opacity: 1;
+    width: 0.15em;
+    background: rgb(50, 50, 50);
+    animation: write 0.5s steps(2) 0.5s forwards, blink 0.75s reverse steps(2) infinite;
+    animation-delay: 7s;
 }
