contact pic ratio, typewriter colors

--- a/css/resume.css
+++ b/css/resume.css
@@ -93,7 +93,7 @@ h2,
 .container-fluid>div>div>h3,
 h4,
 .h3 {
-    color: #00857c;
+    color: cornflowerblue;
     text-align: start;
     font-family: Menlo Regular;
 }
