--- a/css/global.css
+++ b/css/global.css
@@ -27,7 +27,17 @@ html {
 body {
   background-color: transparent;
   align-items: center;
-  /* height: 100vh; */
+}
+
+a,
+a:link,
+a:visited {
+  color: lime;
+  text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 footer {
