--- a/css/welcome.css
+++ b/css/welcome.css
@@ -1,5 +1,5 @@
 html {
-    background-size: cover;
+    background-size: 100%;
     background-attachment: fixed;
     background-position: center;
     background-image: url("../pics/pharm2code_tilt.jpg");
