--- a/css/welcome.css
+++ b/css/welcome.css
@@ -62,6 +62,16 @@ body {
     margin: 0 auto;
 }
 
+.myArticles>div>img {
+    transition: transform 0.5s ease-in-out;
+}
+
+.myArticles>div>img:hover,
+.myArticles>div>img:focus {
+        transform: scale(-1, 1) scale(1);
+        opacity: 0.75;
+}
+
 .img-fluid {
     height: 8rem;
     width: 8rem;
