welcome bg media test mobile

--- a/css/welcome.css
+++ b/css/welcome.css
@@ -15,9 +15,16 @@ body {
     background-size: contain;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: top;
+    background-position: 50% 3rem;
     background-image: linear-gradient(rgba(50,50,50, 0.7), rgba(50, 50, 50, 0.7)),url("../pics/vesselCode_tilt_full.jpg");
     background-image: url("../pics/vesselCode_tilt_part.jpg");
+}
+
+@media (max-width:400px) {
+    body {
+        background-position: 50% 10vmax;
+        background-size: 150%;
+    }
 }
 
 #welcome {
