btnEff copy to contact css

--- a/css/contact.css
+++ b/css/contact.css
@@ -215,6 +215,11 @@ input {
     color: lime;
 }
 
+.buttonEffect {
+    background-color: transparent !important;
+    border-color: transparent !important;
+}
+
 #googleMap {
     background-color: transparent;
     box-shadow: none;
