--- a/css/about.css
+++ b/css/about.css
@@ -12,7 +12,7 @@ body {
 
 /* Article CSS Below */
 .myArticles {
-    margin: 1rem auto;
+    margin: 2rem auto;
     padding: 1rem;
     border: 1px solid black;
     border-radius: 0.25rem;
@@ -20,7 +20,8 @@ body {
     width: 90vw;
     max-width: 960px;
     line-height: 1.6;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+    /* box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; */
 }
 
 @media (max-width:960px) {
@@ -126,6 +127,10 @@ a>img:hover {
     #myIntro>div>p {
         margin-top: -5rem;
     }
+}
+
+#personal {
+    margin-bottom: 3rem;
 }
 
 #personal>.row {
