--- a/css/welcome.css
+++ b/css/welcome.css
@@ -99,8 +99,8 @@ body {
 
 .myArticles>div>img:hover,
 .myArticles>div>img:focus {
-        transform: scale(-1, 1) scale(1);
-        opacity: 0.75;
+    transform: scale(-1, 1) scale(1);
+    opacity: 0.75;
 }
 
 .img-fluid {
@@ -128,6 +128,7 @@ body {
     transition: all 1s ease-in-out;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
+
 #welcomeCard1 {
     /* transition: all 1s ease-in-out; */
     transform: translate(-1.5rem) scale(0.9);
@@ -152,4 +153,11 @@ body {
 
 footer {
     background-color: rgb(50, 50, 50);
+}
+
+@media (max-width:575px) {
+    footer {
+        margin-top: 2rem;
+        padding-top: 1rem;
+    }
 }
