--- a/css/global.css
+++ b/css/global.css
@@ -95,7 +95,7 @@ a:focus {
     z-index: 1;
     margin: 4rem 0 1rem 0;
     width: 100vw;
-    height: 8rem;
+    /* height: 8rem; */
     background-color: rgb(50,50,50);
 }
 
@@ -109,10 +109,10 @@ a:focus {
 @media (max-width:575px) {
     .carousel-inner{
         max-width: 30rem;
-        height: 8rem;
+        /* height: 8rem; */
     }
     #carousel {
-        margin-bottom: 2rem;
+        /* margin-bottom: 2rem; */
     }
 }
 
@@ -120,7 +120,7 @@ a:focus {
     .carousel-inner{
         padding: 0;
         width: 100vw;
-        height: 9rem;
+        /* height: 9rem; */
     }
 }
 
